[build-system]
requires = ["hatchling>=1.27", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "smriprep"
description = "Structural MRI Preprocessing Pipelines"
readme = "README.rst"
authors = [{name = "The NiPreps Developers", email = "nipreps@gmail.com"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "acres >= 0.2",
    "indexed_gzip >= 1.7",
    "lockfile >= 0.12.2",
    "looseversion >= 1.3.0",
    "matplotlib >= 3.5",
    "nibabel >= 4.0.1",
    "nipype >= 1.8.5",
    "nireports >= 25.3.0",
    "nitransforms >= 24.1.1",
    "niworkflows >= 1.14.0",
    "numpy >= 1.24",
    "packaging >= 24",
    "pybids >= 0.16",
    "pyyaml >= 6.0",
    "templateflow >= 25.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/nipreps/smriprep"
Documentation = "https://nipreps.org/smriprep"
"Docker Images" = "https://hub.docker.com/r/nipreps/smriprep/tags/"
NiPreps = "https://www.nipreps.org/"

[project.optional-dependencies]
datalad = ["datalad"]
doc = [
    "nbsphinx",
    "packaging",
    "pydot",
    "sphinx",
    "sphinx-argparse",
    "sphinx_rtd_theme",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-napoleon",
    "sphinxcontrib-versioning",
]
duecredit = ["duecredit"]
test = [
    "coverage[toml] >= 5.2.1",
    "pytest >= 8.1",
    "pytest-cov >= 2.11",
    "pytest-env",
    "pytest-xdist >= 2.5",
]
style = ["flake8"]
# Aliases
docs = ["smriprep[doc]"]
tests = ["smriprep[test]"]
all = ["smriprep[datalad,doc,duecredit,test]"]

[project.scripts]
smriprep = "smriprep.cli.run:main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["src/smriprep"]
exclude = [
    "src/smriprep/data/tests/work",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/smriprep/_version.py"

#
# Developer tool configurations
#

# Disable black
[tool.black]
exclude = ".*"

[tool.pytest.ini_options]
minversion = "8"
testpaths = ["src"]
log_level = "INFO"
xfail_strict = true
norecursedirs = [".git"]
addopts = [
  "-svx",
  "-ra",
  "--strict-config",
  "--strict-markers",
  "--doctest-modules",
  # Config pytest-cov
  "--cov=src/smriprep",
  "--cov-report=xml",
  "--cov-config=pyproject.toml",
]
doctest_optionflags = "ALLOW_UNICODE NORMALIZE_WHITESPACE ELLIPSIS"
env = "PYTHONHASHSEED=0"
filterwarnings = ["ignore::DeprecationWarning"]
junit_family = "xunit2"

[tool.coverage.run]
branch = true
source = ["smriprep"]
omit = [
    "*/tests/*",
]
relative_files = true

[tool.coverage.paths]
source = [
    "smriprep/",
    "*/site-packages/smriprep",
]

[tool.ruff]
line-length = 99
extend-exclude = [
  "wrapper/*.py",
  "docs/sphinxext/*",
]

[tool.ruff.lint]
extend-select = [
  "F",
  "E",
  "W",
  "I",
  "UP",
  "YTT",
  "S",
  "BLE",
  "B",
  "A",
  # "CPY",
  "C4",
  "DTZ",
  "T10",
  # "EM",
  "EXE",
  "FA",
  "ISC",
  "ICN",
  "PT",
  "Q",
]
ignore = [
  "S311",  # We are not using random for cryptographic purposes
  "S603",
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.extend-per-file-ignores]
"*/test_*.py" = ["S101"]
"docs/conf.py" = ["A001"]

[tool.ruff.format]
quote-style = "single"

[tool.codespell]
skip = "*/data/*,*/docs/_build/*,*.svg,*/docs/_static/*"
