[metadata]
url = https://github.com/poldracklab/smriprep
author = The CRN developers
author_email = code@oscaresteban.es
maintainer = Oscar Esteban
maintainer_email = code@oscaresteban.es
description = sMRIPrep (Structural MRI PREProcessing) pipeline
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.5
install_requires =
    indexed_gzip>=0.8.8
    lockfile
    matplotlib>=2.2.0
    nibabel>=2.2.1
    nipype>=1.3.0-rc1
    niworkflows ~= 0.10.3
    scikit-learn >= 0.19
    numpy
    packaging
    pybids ~= 0.9.4
    pyyaml
    templateflow ~= 0.4.1
test_requires =
    coverage
    codecov
    mock
    pytest
packages = find:
include_package_data = True

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    sphinx >=2.1.2
    sphinx_rtd_theme
    sphinx-argparse
    pydotplus
    pydot >=1.2.3
    nbsphinx
    sphinx-versioning @ git+https://github.com/rwblair/sphinxcontrib-versioning.git@39b40b0b84bf872fc398feff05344051bbce0f63
docs =
    %(doc)s
duecredit = duecredit
resmon = psutil >=5.4.0
test =
    coverage
    codecov
    mock
    pytest
tests =
    %(test)s
all =
    %(datalad)s
    %(doc)s
    %(duecredit)s
    %(resmon)s
    %(test)s

[options.package_data]
smriprep =
    data/*.json
    data/*.nii.gz
    data/*.mat
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/reports/config.json
    data/reports/report.tpl
    VERSION

[options.entry_points]
console_scripts =
    smriprep=smriprep.cli.run:main

[versioneer]
VCS = git
style = pep440
versionfile_source = smriprep/_version.py
versionfile_build = smriprep/_version.py
tag_prefix =
parentdir_prefix =
