[metadata]
url = https://github.com/nipreps/smriprep
maintainer = The NiPreps developers
maintainer_email = nipreps@gmail.com
description = sMRIPrep (Structural MRI PREProcessing) pipeline
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
license = 3-clause BSD
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
python_requires = >=3.6
install_requires =
    indexed_gzip >= 0.8.8
    lockfile
    matplotlib >= 2.2.0
    nibabel >= 3.0.1
    nipype >= 1.5.1
    niworkflows >= 1.4.0rc0, <1.5
    numpy
    packaging
    pybids >= 0.11.1
    pyyaml
    templateflow >= 0.6
test_requires =
    coverage
    codecov
    pytest
packages = find:

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 2.1.2, < 3
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-apidoc ~= 0.3.0
    sphinxcontrib-napoleon
    sphinxcontrib-versioning
docs =
    %(doc)s
duecredit = duecredit
resmon = psutil >= 5.4.0
style =
    flake8
test =
    coverage
    codecov
    pytest
    pytest-cov
    pytest-env
tests =
    %(test)s
all =
    %(datalad)s
    %(doc)s
    %(duecredit)s
    %(resmon)s
    %(test)s

[options.package_data]
smriprep =
    VERSION
    data/boilerplate.bib
    data/io_spec.json
    data/itkIdentityTransform.txt

[options.entry_points]
console_scripts =
    smriprep=smriprep.cli.run:main

[versioneer]
VCS = git
style = pep440
versionfile_source = smriprep/_version.py
versionfile_build = smriprep/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = False
exclude=*build/
ignore =
    W503
per-file-ignores =
    **/__init__.py : F401
    docs/conf.py : E265

[tool:pytest]
norecursedirs = .git
addopts = -svx --doctest-modules
doctest_optionflags = ALLOW_UNICODE NORMALIZE_WHITESPACE
env =
    PYTHONHASHSEED=0
filterwarnings =
    ignore::DeprecationWarning

[coverage:run]
branch = True
source = smriprep
omit =
    */tests/*
relative_files = True

[coverage:paths]
source =
    smriprep/
    */site-packages/smriprep
